# toy_car_project

./: readme.txt
Solidwork parts and assembly/: Chassis_rev1.SLDPRT  Wheel_rev1.SLDPRT  connector.SLDPRT  toy_car_rev2.SLDASM
URDF from Solidworks/: CMakeLists.txt  package.xml
URDF from Solidworks/config/: joint_names_toy_car2.yaml
URDF from Solidworks/launch/: display.launch  gazebo.launch
URDF from Solidworks/meshes/: A_front_right.STL
toy_car2/: CMakeLists.txt  package.xml
toy_car2/config/: control.yaml
toy_car2/launch/: display.launch  final.launch  gazebo.launch
toy_car2/meshes/: A_front_left.STL  A_rear_left.STL  A_rear_right.STL  W_front_left.STL  W_front_right.STL  W_rear_left.STL  W_rear_right.STL  base_link.STL
toy_car2/src/: toy_pub.py  toy_sub.py
toy_car2/urdf/: my_robot_integration.urdf.xacro  toy_car.urdf  toy_car2.csv  toy_car_int.urdf  ydlidar.urdf
